
* IOError

  * exception message "stream closed" is changed  [Bug #13405]

* Integer

  * Integer.sqrt  [Feature #13219]
  * Integer#step does no longer rescue exceptions when given
    a step value which cannot be compared with #> to 0. [Feature #7688]
  * Integer#{round,floor,ceil,truncate} now always return an Integer.
    [Bug #13420]

* Kernel

  * Kernel#yield_self  [Feature #6721]

* Numeric

  * Numerical comparison operators (<,<=,>=,>) no longer rescue exceptions
    of #coerce. Return nil in #coerce if the coercion is impossible.
    [Feature #7688]

* Process

  * Precision of Process.times is improved if getrusage(2) exists. [Feature #11952]

* Range
  * Range#initialize no longer rescue exceptions when comparing begin and
    end with #<=> and raise a "bad value for range" ArgumentError
    but instead let the exception from the #<=> call go through.
    [Feature #7688]

* Regexp
  * Update to Onigmo 6.1.1.
    * Support absent operator https://github.com/k-takata/Onigmo/issues/82

* String

  * String#-@ deduplicates unfrozen strings.  Already-frozen
    strings remain unchanged for compatibility.  [Feature #13077]
  * -"literal" (String#-@) optimized to return the same object
    (same as "literal".freeze in Ruby 2.1+) [Feature #13295]
  * String#{casecmp,casecmp?} now return nil for non-string arguments
    instead of raising a TypeError. [Bug #13312]
  * String#delete_prefix is added to remove prefix [Feature #12694]
  * String#delete_prefix! is added to remove prefix destructively [Feature #12694]
  * String#delete_suffix is added to remove suffix [Feature #13665]
  * String#delete_suffix! is added to remove suffix destructively [Feature #13665]
  * String#each_grapheme_cluster and String#grapheme_clusters is added to
    enumerate grapheme clusters [Feature #13780]

* Regexp/String: Updated Unicode version from 9.0.0 to 10.0.0 [Feature #13685]

* Thread

  * Thread#fetch  [Feature #13009]
